--- a/keras-embeddings-script-mode/keras-embeddings.ipynb
+++ b/keras-embeddings-script-mode/keras-embeddings.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "In this notebook we'll look at how to use a Convolutional Neural Net (CNN) in Keras to perform text classification in Amazon SageMaker.  The CNN is based on the Keras example published at https://blog.keras.io/using-pre-trained-word-embeddings-in-a-keras-model.html.  Two aspects of SageMaker will be demonstrated.  First, we'll use SageMaker's Script Mode with a prebuilt TensorFlow/Keras container, along with a training script similar to one you would use outside SageMaker. Second, we'll see how to use SageMaker channels to load word embeddings into the container for training.  \n",
     "\n",
-    "Prerequisite:  run this notebook on a GPU type (P3 or P2) notebook instance.  We'll begin with some necessary imports."
+    "**Prerequisite:  run this notebook on a GPU type (P3 or P2) notebook instance.**  \n",
+    "\n",
+    "We'll begin with some necessary imports."
    ]
   },
   {
@@ -35,15 +37,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# get dataset\n",
-    "!mkdir ./20_newsgroup\n",
-    "!wget -O ./20_newsgroup/news20.tar.gz http://www.cs.cmu.edu/afs/cs.cmu.edu/project/theo-20/www/data/news20.tar.gz\n",
-    "!tar -xvzf ./20_newsgroup/news20.tar.gz"
+    "Initially, we download the 20 Newsgroups dataset.  "
    ]
   },
   {
@@ -52,10 +49,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get embeddings\n",
+    "!mkdir ./20_newsgroup\n",
+    "!wget -O ./20_newsgroup/news20.tar.gz http://www.cs.cmu.edu/afs/cs.cmu.edu/project/theo-20/www/data/news20.tar.gz\n",
+    "!tar -xvzf ./20_newsgroup/news20.tar.gz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next step is to download the GloVe word embeddings that we will load in the neural net."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!mkdir ./glove.6B\n",
     "!wget https://nlp.stanford.edu/data/glove.6B.zip\n",
     "!unzip glove.6B.zip -d ./glove.6B"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have to map the GloVe embedding vectors into an index."
    ]
   },
   {
@@ -72,9 +93,6 @@
     "EMBEDDING_DIM = 100\n",
     "VALIDATION_SPLIT = 0.2\n",
     "\n",
-    "# first, build index mapping words in the embeddings set to their embedding vector\n",
-    "print('Indexing word vectors.')\n",
-    "\n",
     "embeddings_index = {}\n",
     "with open(os.path.join(GLOVE_DIR, 'glove.6B.100d.txt')) as f:\n",
     "    for line in f:\n",
@@ -87,14 +105,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The 20 Newsgroups text also must be preprocessed.  For example, the labels for each sample must be extracted and mapped to a numeric index."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# second, prepare text samples and their labels\n",
-    "print('Processing text dataset')\n",
-    "\n",
     "texts = []  # list of text samples\n",
     "labels_index = {}  # dictionary mapping label name to numeric id\n",
     "labels = []  # list of label ids\n",
@@ -119,12 +141,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can use Keras text preprocessing functions to tokenize the text, limit the sequence length of the samples, and pad shorter sequences as necessary.  Additionally, the preprocessed dataset must be split into training and validation sets."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# finally, vectorize the text samples into a 2D integer tensor\n",
     "tokenizer = Tokenizer(num_words=MAX_NUM_WORDS)\n",
     "tokenizer.fit_on_texts(texts)\n",
     "sequences = tokenizer.texts_to_sequences(texts)\n",
@@ -152,12 +180,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After the dataset text preprocessing is complete, we can now map the 20 Newsgroup vocabulary words to their GloVe embedding vectors for use in an embedding matrix.  This matrix will be loaded in an Embedding layer of the neural net."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# prepare embedding matrix\n",
     "num_words = min(MAX_NUM_WORDS, len(word_index)) + 1\n",
     "embedding_matrix = np.zeros((num_words, EMBEDDING_DIM))\n",
     "for word, i in word_index.items():\n",
@@ -212,7 +246,7 @@
    "source": [
     "# Local Mode Training\n",
     "\n",
-    "Amazon SageMaker’s Local Mode training feature is a convenient way to make sure your code is working as expected before moving on to full scale, hosted training. To train in Local Mode, it is necessary to have docker-compose or nvidia-docker-compose (for GPU) installed in the notebook instance. Running following script will install docker-compose or nvidia-docker-compose and configure the notebook environment for you."
+    "Amazon SageMaker’s Local Mode training feature is a convenient way to make sure your training code is working as expected before moving on to full scale, hosted training. To train in Local Mode, it is necessary to have docker-compose or nvidia-docker-compose (for GPU) installed in the notebook instance. Running following script will install docker-compose or nvidia-docker-compose and configure the notebook environment for you."
    ]
   },
   {
@@ -228,7 +262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we'll set up a TensorFlow Estimator for Local Mode training. One of the key parameters for an Estimator is the train_instance_type, which is the kind of hardware on which training will run. In the case of Local Mode, we simply set this parameter to local_gpu to invoke Local Mode training on the GPU (or to local if the instance has a CPU). Other parameters of note are the algorithm’s hyperparameters, which are passed in as a dictionary, and a Boolean parameter indicating that we are using Script Mode.\n",
+    "Next, we'll set up a TensorFlow Estimator for Local Mode training. One of the key parameters for an Estimator is the train_instance_type, which is the kind of hardware on which training will run. In the case of Local Mode, we simply set this parameter to `local_gpu` to invoke Local Mode training on the GPU (or to `local` if the instance is CPU only). Other parameters of note are the algorithm’s hyperparameters, which are passed in as a dictionary, and a Boolean parameter indicating that we are using Script Mode.\n",
     "\n",
     "BE SURE TO RUN THIS EXAMPLE ON A GPU TYPE (P3 or P2) NOTEBOOK INSTANCE. "
    ]
@@ -277,6 +311,54 @@
     "          'embedding': f'file://{embedding_dir}'}\n",
     "\n",
     "local_estimator.fit(inputs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Local Mode Endpoint\n",
+    "\n",
+    "While Amazon SageMaker’s Local Mode training is very useful to make sure your training code is working before moving on to full scale training, it also would be useful to have a convenient way to test your model locally before incurring the time and expense of deploying it to production.  Of course, you could fetch the SavedModel artifact or a model checkpoint saved in Amazon S3, and load it in your notebook for testing.  However, an even easier way to do this is to use the Amazon SageMaker SDK to do this work for you.\n",
+    "\n",
+    "The Estimator object from the training job can be used to deploy a model with a single line of code.  With one exception, this code is the same as the code you would use to deploy to production.  In particular, all you need to do is invoke the local Estimator's `deploy` method, and similarly to Local Mode training, specify the instance type as either `local_gpu` or `local`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local_predictor = local_estimator.deploy(initial_instance_count=1,instance_type='local_gpu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local_results = local_predictor.predict(x_val[:10])['predictions'] \n",
+    "\n",
+    "print('predictions: \\t{}'.format(np.argmax(local_results, axis=1)))\n",
+    "print('target values: \\t{}'.format(np.argmax(y_val[:10], axis=1)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To avoid having the TensorFlow Serving container running indefinitely on this notebook instance, simply gracefully shut it down by calling the `delete_endpoint` method of the Predictor object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local_predictor.delete_endpoint()"
    ]
   },
   {
